# sql-practice

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
leetcode/: 1148_article_views_I.py  1661_average_time_of_process_per_machine.py  1683_invalid_tweets.py  1757_recyclable_and_low_fat_products.py  197_rising_temperature.py  570_managers_with_atleast_5_direct_reports.py  577_employee_bonus.py  584_find_customer_referee.py
leetcode/pandas/: 1068_product_sales_analysis_I.py  1148_article_views_I.py  1280_students_and_examinations.py  1378_replace_employee_id_with_the_unique_identifier.py  1581_customer_who_visited_but_did_not_make_any_transactions.py  595_big_countries.py
leetcode/sql/: leetcode_1045_customers_who_bought_all_products.sql  leetcode_1050_actors_and_directors_who_cooperated_at_least_three_times.sql  leetcode_1070_product_sale_analysis_III.sql  leetcode_1075_project_employees_I.sql  leetcode_1251_average_selling_price.sql  leetcode_1341_movie_rating.sql  leetcode_175_combine_two_tables.sql  leetcode_176_second_highest_salary.sql  leetcode_177_nth_highest_salary.sql  leetcode_178_rank_scores.sql  leetcode_180_consecutive_numbers.sql  leetcode_181_employees_earning_more_than_their_managers.sql  leetcode_182_duplicate_emails.sql  leetcode_183_customers_who_never_order.sql  leetcode_184_department_highest_salary.sql  leetcode_185_department_top_three_salaries.sql  leetcode_1873_calculate_special_bonus.sql  leetcode_196_delete_duplicate_emails.sql  leetcode_2356_number_of_unique_subjects_taught_by_each_teacher.sql  leetcode_262_trips_and_users.sql  (+21 more)
