[tool.poetry]
name = "sql-practice"
version = "0.1.0"
description = ""
authors = ["Sumanshu Nankana <sumanshunankana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
